# Increment

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.github/workflows/: docker-image-build.yaml
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  postgres.yaml  secret.yaml  service.yaml
scripts/: dev.sh  prod.sh
src/alembic/: env.py
src/alembic/versions/: 3f2a6f5548a1_init.py
src/increment/: __main__.py
src/increment/api/: auth.py  binders.py  main.py  services.py  settings.py  tasks.py
src/increment/api/controllers/: counter.py  increment.py  increment_v1.py  increment_v2.py  system.py
src/increment/api/docs/: __init__.py  binders.py
src/increment/api/schemas/: count.py
src/increment/app/: auth.py  binders.py  main.py  services.py  settings.py
src/increment/app/controllers/: increment.py
src/increment/app/controllers/v1/: __init__.py  increment.py
src/increment/app/docs/: __init__.py  binders.py
src/increment/domain/: common.py
src/increment/domain/models/: counter.py  increment.py
src/increment/domain/repos/: counter.py  increment.py  increment_v2.py
src/increment/domain/services/: counter.py  increment.py  increment_v2.py
src/increment/infra/adapters/repos/: increment.py  increment_v2.py
src/increment/infra/adapters/services/: increment.py  increment_v2.py
src/increment/infra/db/: models.py
src/increment/tests/load/: increment.py
src/tests/load/: counter.py  increment_v2.py
