[project]
name = "increment"
version = "0.1.0"
description = "Just experiment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blacksheep>=2.0.8",
    "blacksheep-cli>=0.0.4",
    "greenlet>=3.1.1",
    "isort>=6.0.1",
    "pre-commit>=4.1.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.38",
    "typer>=0.15.2",
    "uvicorn>=0.34.0",
]

[tool.isort]
profile = "black"
